# eaol_check

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  text.txt
db/migrations/: 001_core_schema.sql
docs/: ai-integration.md  architecture.md  blueprints.md  camunda-bpmn.md  graph-model.md
docs/adr/: 0001-local-first-python-camunda.md
docs/architecture/: event-driven-architecture.md  target-architecture.md
docs/development/: camunda-local.md  local-development.md  pilot-test-flow.md
docs/diagrams/: context.mmd  full-platform.mmd
docs/eaol-enterprise-blueprint/: 01-product-vision-and-scope.md  02-enterprise-architecture.md  03-development-flow.md  04-deployment-kubernetes-okd.md  05-client-delivery-and-integration.md  06-security-governance-compliance.md  07-sprint-roadmap-to-prod.md  08-business-model-profitability.md  09-operating-model-support.md  README.md
docs/integrations/: it-integrations.md
docs/pilot/: firma-it-license.md  it-domain-pilot.md
docs/product/: licensing-model.md  sector-strategy.md
docs/runbooks/: fix-missing-eaol-realm.md  full-self-service-flow.md  keycloak-enterprise-it-flow.md
docs/sector-blueprints/: civil-engineering.md  finance.md  manufacturing-mechanical.md
docs/security/: enterprise-pilot-security-policy.md  (+1 more)
postman/: EAOL_Local.postman_collection.json  EAOL_Local.postman_environment.json
samples/: causal_analysis_request.json
tests/: test_admin_self_service.py  test_api.py  test_it_pilot_features.py  test_license_enforcement.py  test_platform_services.py
(+43 files in other folders)
